--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="google-site-verification" content= <meta name="google-site-verification" content="inAPpPt62AkFGkpMgBv_YH1TUj0TsAGxPmHtxYqgnd8" /> />
+    <meta name="google-site-verification" content="inAPpPt62AkFGkpMgBv_YH1TUj0TsAGxPmHtxYqgnd8" />
     <title>Stock Portfolio Lab</title>
   </head>
   <body>
     <h1>Stock Portfolio Lab</h1>
-    <p>This is the official homepage of the Google Sheets add-on to learn and simulate basic stock investing concepts with interactive scenarios.</p>
+    <p>This is the official homepage of the Stock Portfolio Lab Google Sheets add-on.</p>
+    <p>The add-on helps learners simulate portfolio construction and market events interactively using Google Sheets, with scenario-based learning, charts, and built-in feedback.</p>
   </body>
 </html>
