--- a/index.html
+++ b/index.html
@@ -2,79 +2,77 @@
 <html>
   <head>
     <meta name="google-site-verification" content="inAPpPt62AkFGkpMgBv_YH1TUj0TsAGxPmHtxYqgnd8" />
-    <title>Stock Portfolio Lab</title>
+    <title>Stock Portfolio Lab – Google Sheets Add-on</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        padding: 20px;
+        max-width: 800px;
+        margin: auto;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+      h1 {
+        color: #3367d6;
+      }
+      h2 {
+        margin-top: 30px;
+        color: #444;
+      }
+      a {
+        color: #3367d6;
+      }
+    </style>
   </head>
- <title>Stock Portfolio Lab – Google Sheets Add-on</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-    h1 {
-      color: #3367d6;
-    }
-    h2 {
-      margin-top: 30px;
-      color: #444;
-    }
-    a {
-      color: #3367d6;
-    }
-  </style>
-</head>
-<body>
+  <body>
 
-  <img src="https://github.com/user-attachments/assets/4e908cec-af6b-449d-a3ea-286fd96c33e1" alt="Stock Portfolio Lab Poster" />
+    <img src="https://github.com/user-attachments/assets/4e908cec-af6b-449d-a3ea-286fd96c33e1" alt="Stock Portfolio Lab Poster" />
 
-  <h1>Stock Portfolio Lab – Google Sheets Add-on</h1>
+    <h1>Stock Portfolio Lab – Google Sheets Add-on</h1>
 
-  <p><strong>Stock Portfolio Lab</strong> is a Google Sheets add-on built by <strong>Sudeep Suresh</strong> as part of the <em>Stock Market Basics & Mindset – Made Simple, Fun & Engaging</em> Udemy course.</p>
+    <p><strong>Stock Portfolio Lab</strong> is a Google Sheets add-on built by <strong>Sudeep Suresh</strong> as part of the <em>Stock Market Basics & Mindset – Made Simple, Fun & Engaging</em> Udemy course.</p>
 
-  <p>🎯 It helps learners simulate practical investing scenarios:</p>
-  <ul>
-    <li>Build a portfolio with a $1000 budget and diversify across sectors</li>
-    <li>React to a market crash and rebalance your holdings</li>
-    <li>Observe the impact of different stock combinations</li>
-  </ul>
+    <p>🎯 It helps learners simulate practical investing scenarios:</p>
+    <ul>
+      <li>Build a portfolio with a $1000 budget and diversify across sectors</li>
+      <li>React to a market crash and rebalance your holdings</li>
+      <li>Observe the impact of different stock combinations</li>
+    </ul>
 
-  <p>🔧 No financial data is fetched or stored externally — this is a guided, interactive learning tool built entirely inside Google Sheets.</p>
+    <p>🔧 No financial data is fetched or stored externally — this is a guided, interactive learning tool built entirely inside Google Sheets.</p>
 
-  <hr />
+    <hr />
 
-  <h2>📘 Key Features</h2>
-  <ul>
-    <li>Scenario 1: Create a diversified stock portfolio</li>
-    <li>Scenario 2: Market crash reaction and rebalancing</li>
-    <li>Built-in visual feedback on allocation and risk</li>
-    <li>Learner-friendly UI inside Sheets (menu-driven)</li>
-  </ul>
+    <h2>📘 Key Features</h2>
+    <ul>
+      <li>Scenario 1: Create a diversified stock portfolio</li>
+      <li>Scenario 2: Market crash reaction and rebalancing</li>
+      <li>Built-in visual feedback on allocation and risk</li>
+      <li>Learner-friendly UI inside Sheets (menu-driven)</li>
+    </ul>
 
-  <hr />
+    <hr />
 
-  <h2>🔐 Privacy & Terms</h2>
-  <p>Your data stays in your own Google Sheets.</p>
-  <ul>
-    <li>📄 <a href="https://github.com/creativemonk/stock-portfolio-lab/blob/main/privacy-policy.md" target="_blank">Privacy Policy</a></li>
-    <li>📜 <a href="https://github.com/creativemonk/stock-portfolio-lab/blob/main/terms.md" target="_blank">Terms of Service</a></li>
-  </ul>
+    <h2>🔐 Privacy & Terms</h2>
+    <p>Your data stays in your own Google Sheets.</p>
+    <ul>
+      <li>📄 <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a></li>
+      <li>📜 <a href="terms.html" target="_blank">Terms of Service</a></li>
+    </ul>
 
-  <hr />
+    <hr />
 
-  <h2>🎓 Learn More</h2>
-  <p>This add-on is part of the <strong>Stock Foundations</strong> course on Udemy.</p>
-  <p>📘 <a href="https://www.udemy.com/course/learn-stock-market-for-beginners-investing-basics/?referralCode=5AF74706494D4657A003" target="_blank">Enroll here</a></p>
+    <h2>🎓 Learn More</h2>
+    <p>This add-on is part of the <strong>Stock Foundations</strong> course on Udemy.</p>
+    <p>📘 <a href="https://www.udemy.com/course/learn-stock-market-for-beginners-investing-basics/?referralCode=5AF74706494D4657A003" target="_blank">Enroll here</a></p>
 
-  <hr />
+    <hr />
 
-  <h2>📬 Contact</h2>
-  <p>For support or questions, email: <strong>monktownaxie@gmail.com</strong></p>
+    <h2>📬 Contact</h2>
+    <p>For support or questions, email: <strong>monktownaxie@gmail.com</strong></p>
 
-</body>
+  </body>
 </html>
