--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -5,22 +5,22 @@
   <title>Privacy Policy – Stock Portfolio Lab</title>
 </head>
 <body>
-  <h1>Privacy Policy – Stock Portfolio Lab (Google Sheets Add-on)</h1>
+  <h1>Privacy Policy – Stock Portfolio Lab (Google Sheets™ Add-on)</h1>
   <p><strong>Last Updated:</strong> 15 June 2025</p>
 
   <p>
-    This Google Sheets add-on, <strong>Stock Portfolio Lab</strong>, was created by <strong>Sudeep Suresh</strong> as part of the learning tools for the <em>Stock Foundations</em> Udemy course.
+    This Google Sheets™ add-on, <strong>Stock Portfolio Lab</strong>, was created by <strong>Sudeep Suresh</strong> as part of the learning tools for the <em>Stock Foundations</em> Udemy course.
     It helps learners simulate basic portfolio scenarios — such as building a diversified portfolio within a budget and reacting to market crashes — all in a guided, educational format.
   </p>
 
   <h2>What Data We Access</h2>
   <p>
-    This add-on only accesses data in the Google Sheets file where it is installed. It does not access, collect or store any personal information, user identity or external files.
+    This add-on only accesses data in the Google Sheets™ file where it is installed. It does not access, collect or store any personal information, user identity or external files.
   </p>
 
   <h2>How We Use Your Data</h2>
   <p>
-    All processing happens entirely within your Google Sheets environment. No data is transmitted to any external servers or stored by the developer.
+    All processing happens entirely within your Google Sheets™ environment. No data is transmitted to any external servers or stored by the developer.
   </p>
 
   <h2>Data Sharing</h2>
@@ -44,6 +44,9 @@
 
   <p>
     This privacy policy is for informational purposes only and may be updated periodically. Continued use of the add-on implies acceptance of the current policy.
+  </p>
+  <p>
+    Google Sheets™ is a trademark of Google LLC.
   </p>
 </body>
 </html>
