--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="google-site-verification" content="inAPpPt62AkFGkpMgBv_YH1TUj0TsAGxPmHtxYqgnd8" />
-    <title>Stock Portfolio Lab – Google Sheets Add-on</title>
+    <title>Stock Portfolio Lab – Google Sheets™ Add-on</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -31,9 +31,9 @@
 
     <img src="https://github.com/user-attachments/assets/4e908cec-af6b-449d-a3ea-286fd96c33e1" alt="Stock Portfolio Lab Poster" />
 
-    <h1>Stock Portfolio Lab – Google Sheets Add-on</h1>
+    <h1>Stock Portfolio Lab – Google Sheets™ Add-on</h1>
 
-    <p><strong>Stock Portfolio Lab</strong> is a Google Sheets add-on built by <strong>Sudeep Suresh</strong> as part of the <em>Stock Market Basics & Mindset – Made Simple, Fun & Engaging</em> Udemy course.</p>
+    <p><strong>Stock Portfolio Lab</strong> is a Google Sheets™ add-on built by <strong>Sudeep Suresh</strong> as part of the <em>Stock Market Basics & Mindset – Made Simple, Fun & Engaging</em> Udemy course.</p>
 
     <p>🎯 It helps learners simulate practical investing scenarios:</p>
     <ul>
@@ -42,7 +42,7 @@
       <li>Observe the impact of different stock combinations</li>
     </ul>
 
-    <p>🔧 No financial data is fetched or stored externally — this is a guided, interactive learning tool built entirely inside Google Sheets.</p>
+    <p>🔧 No financial data is fetched or stored externally — this is a guided, interactive learning tool built entirely inside Google Sheets™.</p>
 
     <hr />
 
@@ -57,7 +57,7 @@
     <hr />
 
     <h2>🔐 Privacy & Terms</h2>
-    <p>Your data stays in your own Google Sheets.</p>
+    <p>Your data stays in your own Google Sheets™.</p>
     <ul>
       <li>📄 <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a></li>
       <li>📜 <a href="terms.html" target="_blank">Terms of Service</a></li>
@@ -73,6 +73,6 @@
 
     <h2>📬 Contact</h2>
     <p>For support or questions, email: <strong>monktownaxie@gmail.com</strong></p>
-
+    <p> Google Sheets™ is a trademark of Google LLC. </p>
   </body>
 </html>
