--- a/terms.html
+++ b/terms.html
@@ -5,7 +5,7 @@
   <title>Terms of Service – Stock Portfolio Lab</title>
 </head>
 <body>
-  <h1>Terms of Service – Stock Portfolio Lab (Google Sheets Add-on)</h1>
+  <h1>Terms of Service – Stock Portfolio Lab (Google Sheets™ Add-on)</h1>
   <p><strong>Effective Date:</strong> 15 June 2025</p>
 
   <p>
@@ -15,12 +15,12 @@
   <h2>1. Educational Use Only</h2>
   <p>
     This add-on is provided solely for educational purposes as part of the <em>Stock Market Basics & Mindset – Made Simple, Fun & Engaging</em> Udemy course by <strong>Sudeep Suresh</strong>.
-    It is not intended for actual trading, investment decision-making, or financial advice.
+    It is not intended for actual trading, investment decision-making or financial advice.
   </p>
 
   <h2>2. No Warranty</h2>
   <p>
-    The Add-on is provided "as is", without warranty of any kind. The developer makes no guarantees about its accuracy, performance, or suitability for any particular purpose.
+    The Add-on is provided "as is", without warranty of any kind. The developer makes no guarantees about its accuracy, performance or suitability for any particular purpose.
   </p>
 
   <h2>3. No Liability</h2>
@@ -41,6 +41,9 @@
   <h2>6. Contact</h2>
   <p>
     For any questions regarding these terms, please contact: <a href="mailto:monktownaxie@gmail.com">monktownaxie@gmail.com</a>
+  </p>
+  <p>
+    Google Sheets™ is a trademark of Google LLC.
   </p>
 </body>
 </html>
